--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,7 +1,7 @@
-<% provide(:title, "Help") %>
+<% provide(:title, "Contact") %>
 <h1>Sample App</h1>
     <p>
-      This is the home page for the
+      This is the home page for contactng
       <a href="http://www.railstutorial.org/">Ruby on Rails Tutorial</a>
       sample application.
     </p>
