--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,5 +1,12 @@
-<title><%= full_title(yield(:title)) %></title>
-    <%= csrf_meta_tags %>
-
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+<div class="navbar-inner">
+			<div class="container">
+			<%= link_to "sample app", '#', id: "logo" %>
+			<nav>
+				<ul class="nav pull-right">
+					<li><%= link_to "Home", '#' %></li>
+					<li><%= link_to "Help", '#' %></li>
+					<li><%= link_to "Sign in", '#' %></li>
+				</ul>
+			</nav>
+		</div>
+</div>
