--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 	<html>
 		<head>
-		<title><%= full title(yield(:title)) %></title>
-		<%= stylesheet link tag "application", media: "all" %>
-		<%= javascript include tag "application" %>
-		<%= csrf meta tags %>
+		<title><%= full_title(yield(:title)) %></title>
+		<%= stylesheet_link_tag "application", media: "all" %>
+		<%= javascript_include_tag "application" %>
+		<%= csrf_meta_tags %>
 		
 		<%= render'layouts/shim' %>
 		</head>
