--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -6,4 +6,4 @@
 		</h2>
 	<%= link_to "Sign up now!", '#', class: "btn btn-large btn-primary" %>
 	</div>
-<%= link to image tag("rails.png", alt: "Rails"), 'http://rubyonrails.org/'%>
+<%= link_to image_tag("rails.png", alt: "Rails"), 'http://rubyonrails.org/'%>
