--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,10 +1,10 @@
 <div class="navbar-inner">
 			<div class="container">
-			<%= link_to "sample app", '#', id: "logo" %>
+			<%= link_to "sample app", 'home', id: "logo" %>
 			<nav>
 				<ul class="nav pull-right">
-					<li><%= link_to "Home", '#' %></li>
-					<li><%= link_to "Help", '#' %></li>
+					<li><%= link_to "Home", 'home' %></li>
+					<li><%= link_to "Help", 'help' %></li>
 					<li><%= link_to "Sign in", '#' %></li>
 				</ul>
 			</nav>
