--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,8 +1,8 @@
-<div class="navbar-inner">
+<div class="navbar navbar-inverse">
 			<div class="container">
 			<%= link_to "sample app", 'home', id: "logo" %>
 			<nav>
-				<ul class="nav pull-right">
+				<ul class="nav navbar-nav pull-right">
 					<li><%= link_to "Home", 'home' %></li>
 					<li><%= link_to "Help", 'help' %></li>
 					<li><%= link_to "Sign in", '#' %></li>
