--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -7,4 +7,6 @@
 	<%= link_to "Sign up now!", signup_path, class: "btn btn-large btn-primary" %>
 </div>
 	</div>
-<%= link_to image_tag("rails.png", alt: "Rails"), 'http://rubyonrails.org/'%>
+	<br>
+	<br>
+<center><%= link_to image_tag("rails.png", alt: "Rails"), 'http://rubyonrails.org/'%></center>
