--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,5 +1,14 @@
 
 @import "bootstrap";
+@import "bootstrap-sprockets";
+
+$grayMediumLight: #eaeaea;
+
+@mixin box-sizing {
+-moz-box-sizing: border-box;
+-webkit-box-sizing: border-box;
+box-sizing: border-box;
+}
 
 /* universal */
 html {
@@ -84,4 +93,42 @@ list-style: none;
 footer ul li {
 float: left;
 margin-left: 10px;
+}
+
+/* miscellaneous */
+.debug dump {
+clear: both;
+float: left;
+width: 100%;
+margin-top: 45px;
+@include box-sizing;
+}
+
+/* sidebar */
+aside {
+section {
+padding: 10px 0;
+border-top: 1px solid $grayMediumLight;
+&:first-child {
+border: 0;
+padding-top: 0;
+}
+
+span {
+display: block;
+margin-bottom: 3px;
+line-height: 1;
+}
+
+h1 {
+	font-size: 1.6em;
+	text-align: left;
+	letter-spacing: -1px;
+	margin-bottom: 3px;
+	}
+   }
+ }
+ .gravatar {
+float: left;
+margin-right: 10px;
 }
