--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,6 +4,7 @@
 			<nav>
 				<ul class="nav navbar-nav pull-right">
 					<li><%= link_to "Home", 'home' %></li>
+					<li><%= link_to "About", 'about' %></li>
 					<li><%= link_to "Help", 'help' %></li>
 					<li><%= link_to "Sign in", '#' %></li>
 				</ul>
