--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,10 +10,15 @@
 		</head>
 		<body>
 			<header class="navbar navbar-fixed-top">
-			<%= render'layouts/header' %>
+			  <%= render'layouts/header' %>
 			</header>
 			<div class="container">
+			 <% flash.each do |message_type, message| %>
+		<%= content_tag(:div, message, class: "alert-alert-#{message_type}") %>
+			<% end %>
+
 			<%= yield %>
+
 			<%= render'layouts/footer' %>
 			<%= debug(params) if Rails.env.development? %>
 			</div>
